[metadata]
name = colcon-cd
version = attr: colcon_cd.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-cd/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-cd/
author = Dirk Thomas
author_email = web@dirk-thomas.net
maintainer = Dirk Thomas
maintainer_email = web@dirk-thomas.net
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = A shell function for colcon to change the current working directory.
long_description = file: README.rst
keywords = colcon

[options]
packages = find:
zip_safe = true
